# qt_pomodoro_timer

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md
quotes/: quotes.txt
src/: main.cpp
src/app/: antiprocrastinator.cpp  quotesdialog.cpp
src/headers/: antiprocrastinator.h  quotesdialog.h
